--- a/dump/text.html
+++ b/dump/text.html
@@ -9,7 +9,7 @@
 </style>
 
 <div class="test1">
-<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category" width="200px">
     <ul id="myMenu">
         <li><b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br></li>
         <li><b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br></li>
