--- a/dump/text.html
+++ b/dump/text.html
@@ -8,12 +8,13 @@
 }
 ul { 
     list-style: none; 
-    padding-left: 0; 
+    padding-left: 0;
+    width: 100px;
 }
 </style>
 
 <div class="test1">
-<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category" width="200px">
+<input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
         <li><b><a href="/games/1v1-lol.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">1v1.lol</a><br></li>
         <li><b><a href="/games/basket-random.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Basket Random</a><br></li>
