--- a/dump/text.html
+++ b/dump/text.html
@@ -11,6 +11,11 @@ ul {
     padding-left: 0;
     width: 100px;
 }
+#mySearch {
+  width: 80%;
+  font-size: 18px;
+  border: none;
+}
 </style>
 
 <div class="test1">
