--- a/dump/text.html
+++ b/dump/text.html
@@ -14,7 +14,7 @@ ul {
 #mySearch {
   width: 28%;
   font-size: 14px;
-  border: none;
+  border: 3px solid #ddd;
   border-radius: 15px;
   padding: 10px;
 }
