--- a/dump/text.html
+++ b/dump/text.html
@@ -69,7 +69,7 @@ ul {
         <li><b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br></li>
         <li><b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros. (NES)</a><br></li>
         <li><b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br></li>
-        <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2 (GBA)</a><br></li>
+        <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">T-Hawk Pro Skater: 2 (GBA)</a><br></li>
         <li><b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
     </ul>
