--- a/games/doge-miner.html
+++ b/games/doge-miner.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<p align="center"><iframe src="" id="iframe"></iframe></p>
+<p align="center"><iframe src="/game-assets/DogeMiner/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
 
