--- a/dump/text.html
+++ b/dump/text.html
@@ -34,6 +34,7 @@ ul {
         <li><b><a href="/g/donkey-kong.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Donkey Kong</a><br></li>
         <li><b><a href="/g/drift-boss.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drift Boss</a><br></li>
         <li><b><a href="/g/drive-mad.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Drive Mad</a><br></li>
+        <li><b><a href="/g/drive-mad.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Eagler Craft (Minecraft)</a><br></li>
         <li><b><a href="/g/eggy-car.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Eggy Car</a><br></li>
         <li><b><a href="/g/geometry-dash.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Geometry Dash</a><br></li>
         <li><b><a href="/g/getaway-shootout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Getaway Shootout</a><br></li>
