--- a/dump/text.html
+++ b/dump/text.html
@@ -42,6 +42,7 @@ ul {
         <li><b><a href="/g/gun-mayhem-2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Gun Mayhem 2</a><br></li>
         <li><b><a href="/g/harry-potter-sorcerers-stone.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 1 (GBA)</a><br></li>
         <li><b><a href="/g/harry-potter-chamber-of-secrets.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Harry Potter: 2 (GBA)</a><br></li>
+        <li><b><a href="/g/idle-breakout.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Breakout</a><br></li>
         <li><b><a href="/g/idle-mining-empire.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Idle Mining Empire</a><br></li>
         <li><b><a href="/g/kirka-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Kirka.io</a><br></li>
         <li><b><a href="/g/krunker-io.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Krunker.io</a><br></li>
