--- a/test-index.html
+++ b/test-index.html
@@ -31,4 +31,4 @@
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px;"><a href="/games/fortnite.html"></p> 
+<p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; padding-top: 50px;"><a href="/games/fortnite.html"></p> 
