--- a/test-index.html
+++ b/test-index.html
@@ -32,4 +32,5 @@
 </div>
 
 <p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; padding-top: 50px;"><a href="/games/fortnite.html"></p>
-<p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; padding-top: 50px;"><a href="/games/slope.html"></p> 
+<p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px;"><a href="/games/slope.html"></p>
+<p align="center"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px;"><a href="/games/gun-mayhem-2.html"></p>
