--- a/test-index.html
+++ b/test-index.html
@@ -32,10 +32,10 @@
 </div>
 
 <div class="images">
-<p align="center"><a href="/games/fortnite.html"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
-<a href="/games/slope.html"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
-<a href="/games/gun-mayhem-2.html"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
-<a href="/games/gun-mayhem-2.html"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
-<a href="/games/gun-mayhem-2.html"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
+<p align="center"><a href="/games/fortnite.html" style="text-decoration: none;"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
+<a href="/games/slope.html" style="text-decoration: none;"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
+<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/fortnite.png" height="160" width="160" style="border: 10px solid #00121f; border-radius: 25px; margin: 20px;">
 </p>
 </div>
