--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
-<meta name="description" content="The website spew45.github.io is a clean website with games for all your math education needs!">
+<meta name="description" content="The website spew45.github.io is a clean website with 50+ popular games for all your math education needs including Minecraft, Cookie Clicker, and many more!">
 <meta name="keywords" content="spew45, ubg, minecraft unblocked, retro bowl unblocked, retro bowl, money mart, money mart unblocked,">
 <meta name="news_keywords" content="UBG, Unblocked Games, Games, Eazy Games, 3D Games, Games for math, school games, spew45.github.io,">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
