--- a/test-index.html
+++ b/test-index.html
@@ -39,3 +39,8 @@
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="7" hspace="7">
 </p>
 </div>
+
+<div class="header">
+  <h1>Header</h1>
+  <p>Subheading</p>
+</div>
