--- a/test-index.html
+++ b/test-index.html
@@ -16,8 +16,8 @@
 <title>Homepage</title>
 
 <div class="header">
-  <h1 style="font-family: 'Poppins', sans-serif;">Header</h1>
-  <p style="font-family: Arial;">Subheading</p>
+  <h1 style="font-family: 'Poppins', sans-serif;">Spew45.github.io</h1>
+  <p style="font-family: Arial;">The best website for all your unblocked game need with over 50+ games!</p>
 </div>
 
 <body style="background-color: #001b2e;"></body>
