--- a/dump/website-not-working.html
+++ b/dump/website-not-working.html
@@ -1,2 +1,1 @@
-This website is currently being worked on and tested, come back later to player over 50+ ad free unblocked games! <br>
-while your waiting you can try out a old website that doesn't get updated with around 35+ ad free unblocked games <a href="https://spew45.github.io/web-games/" style="text-decoration: none;">here!</a>
+This website is currently being worked on and tested, come back later to player over 50+ ad free unblocked games! while your waiting you can try out <br>my old website that doesn't get updated with around 35+ ad free unblocked games <a href="https://spew45.github.io/web-games/" style="text-decoration: none;">here!</a>
