--- a/games/spotify.html
+++ b/games/spotify.html
@@ -38,6 +38,6 @@
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/soccer-random/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://g312o742o975d845l75u45c324k904g28e391t53t035i174n3g25i23t894.mlb5325.repl.co/service/hvtrs8%2F-orel.qpmtkf%7B.aoo%2F" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
