--- a/games/3kh0.html
+++ b/games/3kh0.html
@@ -3,7 +3,7 @@
 <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Playing Drift Boss</title>
+        <title>3kh0</title>
         <style type="text/css">
             body, html
             {
