--- a/games/moto-x3m.html
+++ b/games/moto-x3m.html
@@ -19,7 +19,7 @@
 <title>Classes</title>
 
 <div class="header">
-  <a href="https://spew45.github.io"><h1 style="font-family: 'Poppins', sans-serif; text-decoration: none;">Spew45.github.io</h1>
+  <a href="https://spew45.github.io"><h1 style="text-decoration: none; font-family: 'Poppins', sans-serif;">Spew45.github.io</h1>
   <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular 
 unblocked games!</p>
 </div>
