--- a/dump/text.html
+++ b/dump/text.html
@@ -31,6 +31,7 @@ ul {
         <li><b><a href="/games/btd4.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Balloons TD 4</a><br></li>
         <li><b><a href="/games/burrito-bison.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Burrito Bison</a><br></li>
         <li><b><a href="/games/cat-trap.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cat Trap</a><br></li>
+        <li><b><a href="/games/chess.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Chess.com</a><br></li>
         <li><b><a href="/games/color-tunnel.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Color Tunnel</a><br></li>
         <li><b><a href="/games/contra-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Contra 3</a><br></li>
         <li><b><a href="/games/cookie-clicker.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Cookie Clicker</a><br></li>
