--- a/games/3kh0.html
+++ b/games/3kh0.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://3kh0.github.io/"></iframe>
+            <iframe width="100%" height="100%" frameborder="0" src="https://3kho.radioactivepotato.me/"></iframe>
         </div>
     </body>
 </html>
