--- a/dump/text.html
+++ b/dump/text.html
@@ -16,10 +16,17 @@ ul {
 #mySearch {
   width: 33%;
   font-size: 14px;
-  border: 2px solid #232323;
+  border: 2px solid #181818;
   border-radius: 15px;
   padding: 10px;
-  background-color: #4d4d4d;
+  background-color: #232323;
+}
+input, select, textarea{
+    color: #fff;
+}
+
+textarea:focus, input:focus {
+    color: #fff;
 }
 </style>
 
