--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ unblocked games!</p>
 </div>
 
 <div class="images">
-<p align="center"><a href="/games/fortnite.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10" style="margin-top: 50px;">
+<p align="center"><a href="/games/slope-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10" style="margin-top: 50px;">
 <a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
 <a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
