--- a/dump/text.html
+++ b/dump/text.html
@@ -98,6 +98,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset</a><br></li>
         <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br></li>
         <li><b><a href="/games/time-shooter-3.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Time Shooter: 3</a><br></li>
+        <li><b><a href="/games/tubi.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tubi (Movies, App)</a><br></li>
         <li><b><a href="/games/uno.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Uno Online</a><br></li>
         <li><b><a href="/games/uv.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Ultraviolet</a><br></li>
         <li><b><a href="/games/wheelie-cross.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Wheelie Cross</a><br></li>
