add broken to subway surfers

--- a/dump/text.html
+++ b/dump/text.html
@@ -93,7 +93,7 @@ textarea:focus, input:focus {
         <li><b><a href="/games/spotify.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Spotify (Music, App)</a><br></li>
         <li><b><a href="/games/stick-merge.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stick Merge</a><br></li>
         <li><b><a href="/games/stickman-hook.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Stickman Hook</a><br></li>
-        <li><b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers</a><br></li>
+        <li><b><a href="/games/subway-surfers.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Subway Surfers (Broken)</a><br></li>
         <li><b><a href="/games/super-mario-bros.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Super Mario Bros.</a><br></li>
         <li><b><a href="/games/tanuki-sunset.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tanuki Sunset (Broken)</a><br></li>
         <li><b><a href="/games/thps2.html" style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #fff; text-decoration: none;" target="_parent">Tony Hawk Pro Skater: 2</a><br></li>
