--- a/games/123-movies.html
+++ b/games/123-movies.html
@@ -41,6 +41,6 @@ unblocked games!</p>
 
 <p align="center"><iframe src="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-wu8%2C0321mmvke%2Cngt-" id="iframe"></iframe></p>
 
-<button class="button button1" href="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-wu8%2C0321mmvke%2Cngt-">Open Page</button>
+<p align="center"><button class="button button1" href="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-wu8%2C0321mmvke%2Cngt-">Open Page</button></p>
 
 <script src="/js/test.js"></script>
