--- a/games/vumoo.html
+++ b/games/vumoo.html
@@ -41,4 +41,6 @@ unblocked games!</p>
 
 <p align="center"><iframe src="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-vwmmo%2Ctm%2F" id="iframe"></iframe></p>
 
+<p align="center"><a href="https://directory-2.mlb5325.repl.co/service/hvtrs8%2F-vwmmo%2Ctm%2F"><b><button class="button button1">Open Page</button></b></p></a>
+
 <script src="/js/test.js"></script>
