--- a/games/snow-rider-3d.html
+++ b/games/snow-rider-3d.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://mj89sp3sau2k7lj1eg3k40hkeppguj6j-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=http://www.gstatic.com/sites-gadgets/iframe/iframe.xml&container=enterprise&view=default&lang=en&country=ALL&sanitize=0&v=394a474f5dcb645c&libs=core&mid=188&parent=https://sites.google.com/site/unblockedgame911/fortnite#up_scroll=no&up_iframeURL=https://snowrider3d.games235.com/#gamedistribution&st=e%3DAIHE3cA%252BGGn4tfiYqRuQhrnvfuqPryo91%252F%252FVLqPyNIlcurqNwttixf6sBde6TKSOPfMiRTCFQXufCIwTQ8rP9OvJqslTzKQqoSwj7HNsf6xgauXfey%252BmdHoHkaSI98ttNC%252FtuPvDA8Z%252F%26c%3Denterprise&rpctoken=8082898034791331026" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://html5.gamedistribution.com/3b79a8537ebc414fb4f9672a9b8c68c8/?gd_sdk_referrer_url=https://www.mathnook.com/fun-games-2/soccer-skills-2021.html" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
