--- a/games/craft-mine.html
+++ b/games/craft-mine.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/Stuff/projects/craftmine/index.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/projects/craftmine/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
