--- a/games/sort-the-court.html
+++ b/games/sort-the-court.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/Stuff/projects/sort-the-court/index.html" scrolling="no" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/sort-the-court/" scrolling="no" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
