--- a/games/subway-surfers.html
+++ b/games/subway-surfers.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/Stuff/projects/subway-surfers/index.html" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/game-assets/subway-surfers/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
