--- a/index.html
+++ b/index.html
@@ -52,9 +52,16 @@
 
 <div class="images"><p align="center">
 <a href="/games/power-badminton.html" style="text-decoration: none;"><img src="images/games/power-badminton.png" height="160" width="160" vspace="10" hspace="10">
-<a href="/games/slope.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
-<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
-<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
-<a href="/games/gun-mayhem-2.html" style="text-decoration: none;"><img src="images/profile.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/subway-surfers.html" style="text-decoration: none;"><img src="images/games/subway-surfers.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/slope.html" style="text-decoration: none;"><img src="images/games/slope.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/retro-bowl.html" style="text-decoration: none;"><img src="images/games/retro-bowl.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/monkey-mart.html" style="text-decoration: none;"><img src="images/games/monkey-mart.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/burrito-bison.html" style="text-decoration: none;"><img src="images/games/burrito-bison.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/doge-miner.html" style="text-decoration: none;"><img src="images/games/doge-miner.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/draw-the-hill.html" style="text-decoration: none;"><img src="images/games/draw-the-hill.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/drift-boss.html" style="text-decoration: none;"><img src="images/games/drift-boss.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/drive-mad.html" style="text-decoration: none;"><img src="images/games/drive-mad.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/rooftop-snipers.html" style="text-decoration: none;"><img src="images/games/rooftop-snipers.png" height="160" width="160" vspace="10" hspace="10">
+<a href="/games/super-mario-bros.html" style="text-decoration: none;"><img src="images/games/super-mario-bros.png" height="160" width="160" vspace="10" hspace="10">
 </p>
 </div>
