--- a/games/retro-bowl.html
+++ b/games/retro-bowl.html
@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/retro-bowl/" style="width: 900px; height: 506px; border: 0px; border-radius: 0px; margin-top: 20px;"></iframe></p>
+<p align="center"><iframe src="https://spew45.github.io/simple-games-assets/src/retro-bowl/" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
